# Arrow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ai_extraction_postmortem.md  arrow_db_schema.html  calculate.py  company_specific_types.md  compute.py  eval.py  extract.py  extract_master_design.md  extraction_logic.md  fetch.py  fmp-truth-plan.md  formulas.md  gemini-extract-design.md  golden_eval.xlsx  plan.md  pyproject.toml  rd_capitalization_reference.md  transcripts-plan.md
.pi/: APPEND_SYSTEM.md
ai_extract/: ai_extract.py  ai_extraction_flow.md  ai_extraction_flow_full.md  ai_formula.py  analyze_statement.py  canonical_buckets.md  export_for_review.py  export_full_check_csv.py  fcx_q1cy24_all_v2.json  map_by_label.py  map_to_extract.py  nvda_ai_extract.json  nvda_mapped.json  nvda_mapped_v2.json  nvda_q1_fy22_facts.json  nvda_q1fy26_all_gemini3flash.json  nvda_q1fy26_all_statements.json  nvda_q1fy26_all_statements_review.csv  nvda_q1fy26_income_analysis.json  nvda_q1fy26_income_sonnet.json  nvda_q2fy26_all.json  nvda_q3fy26_all_v2.json  parse_xbrl.py  parse_xbrl_facts.py  prompt_layer2_draft.md  run_full_pipeline.py  test_all_periods.py  test_golden_eval.py  unp_ai_extract.json  validate_quarterly.py  view_extraction.py
companies/: dell.py  fcx.py  lyb.py  msft.py  nvda.py  panw.py  pltr.py  sym.py
dashboard/: index.html
deterministic-flow/: company_specific_types.md  compute.py  eval.py  extract.py
docs/: setup.md
fmp/: DESIGN.md
golden/: dell.json  fcx.json  lyb.json  nvda.json  panw.json  pltr.json  sym.json
scripts/: apply_schema.py  (+55 more)
(+339 files in other folders)
