[project]
name = "arrow"
version = "0.1.0"
description = "FMP-first, PostgreSQL-backed company-intelligence system."
authors = [
    { name = "peakyragnar", email = "mcunningham@fastmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
