[project]
name = "arrow"
version = "0.1.0"
description = "FMP-first, PostgreSQL-backed company-intelligence system."
authors = [
    { name = "peakyragnar", email = "mcunningham@fastmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.32",
    "python-multipart>=0.0.26",
    "httpx>=0.28.1",
    "anthropic>=0.40",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
